stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__parse_tests__stack_depth_too_deep_case_3_list_only_checker.snap
---
source: stackslib/src/chainstate/tests/parse_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "fb3e34ce37e0bff6b2b24c74f8c87640ca8ab189d6bd078ea738ae0103d66b6a",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch3_4-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 140,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21669,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 140,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21669,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "02f49b8a069087919dc73ed887e43fe4458100eb1fd85b9cac367ce661e413af",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch3_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 140,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21669,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 140,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21669,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "dbb007b3ae752c967d745d21f059cc6a56302c85679a0e2cc702e042895572cd",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch3_4-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 140,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21669,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 140,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21669,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "ac6d3397bb9d1631af0a39d3c28e771d8ac611e726d977a3550bdd42ef11b8cd",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 140,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21669,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 140,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21669,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "fa6585209131022023c1510d932b0b54842044e9dee3d9c6d9d5413a59c06f51",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 140,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21669,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 140,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21669,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "74b7e52b592b30d04627856b6d2742647bdec65a8e6708a4719c87572c101a1b",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 140,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21669,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 140,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21669,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "73510572d9ce8d39b7818fdbb49e30360b32e61ebba07a3d57a34cf5002cca88",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 140,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21669,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 140,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21669,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "b40e2235d63c69a17d4bac54ef0a9267844c669a9a0e19cf849fe3fa0c8b09f8",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 140,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21669,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 140,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21669,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "21f8d264f857d5b8a739c736789c9413c84db758a9255b6f52c6e654be76c560",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 140,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21669,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 140,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21669,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "0342a7667623f00c2eb38c1feeb77e756075365f78b696fb548703eee081bedb",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 140,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21669,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 140,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21669,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "b8ce5599ee77d11e2da5c498823ceeb6b826cb104240fabb71fe82c7b67fc8b3",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity6, code_body: [..], clarity_version: Some(Clarity6))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 140,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21669,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 140,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21669,
    ),
  )),
]
